# CubeWorld

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
3rd/: glad.c  glad.cpp
3rd/imgui/: imgui_demo.cpp
include/: async_chunk_cache.h  block.h  bridge.h  buffer.h  chunk.h  chunk_builder.h  chunk_mesh.h  chunk_renderer.h  client_level.h  client_main.h  config.h  cube_map.h  drawable_object.h  game_camera.h  game_main.h  gc_cache.h  image.h  imgui_debug_info.h  input_handler.h  level.h  level_mesh.h  level_renderer.h  level_server.h  lru.h  opengl_window.h  player.h  position.h  render_context.h  renderable.h  resource_manager.h  screen_renderer.h  simple_shader.h  subchunk_mesh.h  terrain_generator.h  texture.h  thread_pool.h  time_counter.h  utils.h  vbo_pool.h
include/glad/: glad.h
include/single/: thread_pool.h
res/shaders/: base.frag  base.vert  chunk.frag  chunk.vert  chunk2.frag  chunk2.vert  cursor.frag  cursor.vert  depth_map.vert  gbuffer.frag  gbuffer.vert  gbuffer_chunk.frag  gbuffer_chunk.vert  light.frag  main.frag  main.vert  overworld_sky.frag  overworld_sky.vert  quad.frag  quad.vert  screen_debug.frag  screen_debug.vert  shadow_map_debug.frag  shadow_map_debug.vert  ssao.frag  ssao.vert
src/: async_chunk_cache.cpp  block.cpp  chunk.cpp  config.cpp  drawable_object.cpp  game_camera.cpp  game_main.cpp  input_handler.cpp  level.cpp  opengl_window.cpp  simple_shader.cpp  subchunk_mesh.cpp  terrain_generator.cpp  texture.cpp  utils.cpp
src/client/: buffer.cpp  chunk_mesh.cpp  chunk_renderer.cpp  client_level.cpp  client_main.cpp  cube_map.cpp  game_camera.cpp  image.cpp  level_mesh.cpp  level_renderer.cpp  opengl_window.cpp  renderable.cpp  resource_manager.cpp  simple_shader.cpp  texture.cpp
src/common/: bridge.cpp  config.cpp  utils.cpp
src/core/: chunk.cpp  level.cpp  terrain_generator.cpp
src/render/: cube_map.cpp  drawable_object.cpp  game_camera.cpp  level_renderer.cpp  opengl_window.cpp  render_context.cpp  resource_manager.cpp  subchunk_mesh.cpp  texture.cpp
src/server/: block.cpp  chunk.cpp  chunk_builder.cpp  level_server.cpp  terrain_generator.cpp
src/server/data/: position.cpp
tools/: sky_box_gen.cpp
